--- a/back-end/package.json
+++ b/back-end/package.json
@@ -22,5 +22,13 @@
         "sass-loader": "7.*",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "core-util-is": "^1.0.2",
+        "dotenv": "^8.1.0",
+        "express": "^4.17.1",
+        "ioredis": "^4.14.1",
+        "socket.io": "^2.3.0",
+        "webpack-dev-server": "^3.8.2"
     }
 }
